--- a/examples/northwind/Makefile
+++ b/examples/northwind/Makefile
@@ -12,13 +12,11 @@ northwind:
 	docker run --rm -v "`pwd`:${NORTHWIND_PACKAGE_DIR}" -w ${NORTHWIND_PACKAGE_DIR} ${ARTISAN_IMAGE_CLI} make build
 
 build:
-	#TODO: Use artisan
-	rm -rf bindings
-	mkdir -p bindings
-	protoc -o bindings/description.pb \
+	artisan generate -f artisan.yaml
+	protoc -o artisan/schema/description.pb \
 		--include_imports \
 		--include_source_info \
-		--go_out=plugins=grpc:./bindings/ \
+		--go_out=plugins=grpc:./artisan/grpc/ \
 		--proto_path=/artisan/include \
 		--proto_path=protos \
 		-I $(shell find protos/ -iname *.proto)
