--- a/artisan/Dockerfile
+++ b/artisan/Dockerfile
@@ -1,5 +1,5 @@
 FROM artisan-compiler:0.0.1
-COPY include /artisan/include
+COPY api/ /artisan/include/artisan
 COPY bin/artisan /artisan/artisan
 RUN ln -s /artisan/artisan /usr/local/bin/artisan
 WORKDIR /artisan
